--- a/src/.env
+++ b/src/.env
@@ -1,2 +1,1 @@
-REACT_APP_QUIZ_API_KEY=
-# https://quizapi.io/ generate api key and then proceed.
+REACT_APP_QUIZ_API_KEY=mgPbKrdTveIkqazNk4PNFsQE2sIbqXXVgtgProHK
